Smooth Scrolling on Mobile resolved. Updated @media

--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ label {
     display: none;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
     label {
         display: block;
         cursor: pointer;
